-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations

--- a/TbdModule/src/main/res/layout/fragment_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
             android:id="@+id/settings_exit"
             android:layout_width="50dp"
             android:layout_height="70dp"
-            android:src="@drawable/tbd_exit"
+            android:src="@drawable/arrow_back_black"
             android:padding="14dp"/>
 
      <TextView
@@ -29,9 +29,6 @@
 
     </RelativeLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -170,7 +167,7 @@
                             android:layout_width="40dp"
                             android:id="@+id/tbd_font"
                             android:layout_height="40dp"
-                            android:src="@drawable/icons8_night_mode"
+                            android:src="@drawable/icons8_font"
                             android:padding="12dp" />
                         <TextView
                             android:layout_marginStart="20dp"
@@ -181,42 +178,145 @@
                             android:textColor="@color/black"
                             android:layout_toEndOf="@+id/tbd_font"/>
 
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/arrow_next1"
+                            android:src="@drawable/icons8_arrow"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"/>
                     </RelativeLayout>
 
-                    <!-- Dark Mode/ Night Mode-->
+                    <!-- Contact Us-->
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                         <ImageView
                             android:layout_width="40dp"
-                            android:id="@+id/tbd_night"
+                            android:id="@+id/tbd_aboutus"
                             android:layout_height="40dp"
-                            android:src="@drawable/icons8_night_mode"
+                            android:src="@drawable/icons8_help"
                             android:padding="12dp" />
                         <TextView
                             android:layout_marginStart="20dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:text="Night Mode"
+                            android:text="About Us"
                             android:textColor="@color/black"
-                            android:layout_toEndOf="@+id/tbd_night"/>
-                        <androidx.appcompat.widget.SwitchCompat
+                            android:layout_toEndOf="@+id/tbd_aboutus"
+                            />
+                        <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:id="@+id/arrow_next2"
+                            android:src="@drawable/icons8_arrow"
                             android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:switchMinWidth="50dp"
-                            android:theme="@style/nightModeSwitch"/>
+                            android:layout_centerVertical="true"/>
                     </RelativeLayout>
 
+                    <!-- Font Size-->
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:id="@+id/tbd_pref"
+                            android:layout_height="40dp"
+                            android:src="@drawable/icons8_preferences"
+                            android:padding="12dp" />
+                        <TextView
+                            android:layout_marginStart="20dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:text="Preferences"
+                            android:textColor="@color/black"
+                            android:layout_toEndOf="@+id/tbd_pref"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/arrow_next3"
+                            android:src="@drawable/icons8_arrow"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true"/>
+                    </RelativeLayout>
                 </LinearLayout>
+
+            <LinearLayout
+                android:background="@drawable/bg_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
+                android:padding="15dp">
+
+                <!-- Feedback-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:id="@+id/tbd_feedback"
+                        android:layout_height="40dp"
+                        android:src="@drawable/icons8_feedback"
+                        android:padding="12dp" />
+                    <TextView
+                        android:layout_marginStart="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="Feedback"
+                        android:textColor="@color/black"
+                        android:layout_toEndOf="@+id/tbd_feedback"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/arrow_next4"
+                        android:src="@drawable/icons8_arrow"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+                <!-- About Us-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:id="@+id/tbd_help"
+                        android:layout_height="40dp"
+                        android:src="@drawable/icons8_help"
+                        android:padding="12dp" />
+                    <TextView
+                        android:layout_marginStart="20dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="Help"
+                        android:textColor="@color/black"
+                        android:layout_toEndOf="@+id/tbd_help"/>
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/tbd_call"
+                        android:src="@drawable/tbd_call"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"/>
+                </RelativeLayout>
+
+            </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
 
 
-    </ScrollView>
-</LinearLayout>
