-Added scrollview to rest of buildings

--- a/TbdModule/src/main/res/layout/fragment_fourth.xml
+++ b/TbdModule/src/main/res/layout/fragment_fourth.xml
@@ -7,8 +7,8 @@ Section RCA
 Safah Virk N01596470
 Section RCB
 -->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,168 +16,174 @@ Section RCB
     android:background="#F1B3C7"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/frame1D"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.212"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196" >
-
-        <ImageButton
-            android:id="@+id/room1d"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:contentDescription="@string/room_1d"
-            android:background="@color/colorPrimary"
-            android:scaleType="fitCenter"
-            />
-
-        <TextView
-            android:id="@+id/room1DText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomD201"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/room1DTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/occupied"
-            android:layout_gravity="center" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frame2D"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196" >
-
-        <ImageButton
-            android:id="@+id/room2d"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_2d"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
-
-        <TextView
-            android:id="@+id/room2DText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomD202"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/room2DTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
-
-    </FrameLayout>
-
-
-    <FrameLayout
-        android:id="@+id/frame3D"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.212"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.475">
-
-        <ImageButton
-            android:id="@+id/room3d"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_3d"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
-
-        <TextView
-            android:id="@+id/room3DText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomD203"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/room3DTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/frame4D"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.475">
-
-        <ImageButton
-            android:id="@+id/room4d"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_4d"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
-
-        <TextView
-            android:id="@+id/room4DText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomD204"
-            android:layout_gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/room4DTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/textBuildingD"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="668dp"
-        android:text="@string/building_d"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <FrameLayout
+            android:id="@+id/frame1D"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.212"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.196" >
+
+            <ImageButton
+                android:id="@+id/room1d"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/room_1d"
+                android:background="@color/colorPrimary"
+                android:scaleType="fitCenter"
+                />
+
+            <TextView
+                android:id="@+id/room1DText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomD201"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room1DTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/occupied"
+                android:layout_gravity="center" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/frame2D"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.823"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.196" >
+
+            <ImageButton
+                android:id="@+id/room2d"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_2d"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/room2DText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomD202"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room2DTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:id="@+id/frame3D"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.212"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.475">
+
+            <ImageButton
+                android:id="@+id/room3d"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_3d"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/room3DText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomD203"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room3DTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/frame4D"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.823"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.475">
+
+            <ImageButton
+                android:id="@+id/room4d"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_4d"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/room4DText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomD204"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room4DTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/textBuildingD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="157dp"
+            android:layout_marginBottom="668dp"
+            android:text="@string/building_d"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
