--- a/TbdModule/src/main/res/layout/fragment_third.xml
+++ b/TbdModule/src/main/res/layout/fragment_third.xml
@@ -7,7 +7,8 @@ Section RCA
 Safah Virk N01596470
 Section RCB
 -->
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,170 +16,176 @@ Section RCB
     android:background="@color/baige"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/frame1C"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.212"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196" >
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/room1c"
+        <FrameLayout
+            android:id="@+id/frame1C"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:contentDescription="@string/room_1c"
-            android:background="@color/colorPrimary"
-            android:scaleType="fitCenter"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.212"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.196" >
 
-        <TextView
-            android:id="@+id/room1CText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomC201"
-            android:layout_gravity="center_horizontal" />
+            <ImageButton
+                android:id="@+id/room1c"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/room_1c"
+                android:background="@color/colorPrimary"
+                android:scaleType="fitCenter"
+                />
 
-        <TextView
-            android:id="@+id/room1CTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/occupied"
-            android:layout_gravity="center" />
-    </FrameLayout>
+            <TextView
+                android:id="@+id/room1CText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomC201"
+                android:layout_gravity="center_horizontal" />
 
-    <FrameLayout
-        android:id="@+id/frame2C"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.196" >
+            <TextView
+                android:id="@+id/room1CTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/occupied"
+                android:layout_gravity="center" />
+        </FrameLayout>
 
-        <ImageButton
-            android:id="@+id/room2c"
+        <FrameLayout
+            android:id="@+id/frame2C"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_2c"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.823"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.196" >
 
-        <TextView
-            android:id="@+id/room2CText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomC202"
-            android:layout_gravity="center_horizontal" />
+            <ImageButton
+                android:id="@+id/room2c"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_2c"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
 
-        <TextView
-            android:id="@+id/room2CTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
+            <TextView
+                android:id="@+id/room2CText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomC202"
+                android:layout_gravity="center_horizontal" />
 
-    </FrameLayout>
+            <TextView
+                android:id="@+id/room2CTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
 
 
-    <FrameLayout
-        android:id="@+id/frame3C"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.212"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.475">
-
-        <ImageButton
-            android:id="@+id/room3c"
+        <FrameLayout
+            android:id="@+id/frame3C"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_3c"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.212"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.475">
 
-        <TextView
-            android:id="@+id/room3CText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RoomC203"
-            android:layout_gravity="center_horizontal" />
+            <ImageButton
+                android:id="@+id/room3c"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_3c"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
 
-        <TextView
-            android:id="@+id/room3CTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
+            <TextView
+                android:id="@+id/room3CText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomC203"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room3CTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
 
 
-    </FrameLayout>
+        </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/frame4C"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.823"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.475">
-
-        <ImageButton
-            android:id="@+id/room4c"
+        <FrameLayout
+            android:id="@+id/frame4C"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:clickable="false"
-            android:contentDescription="@string/room_4c"
-            android:background="@color/darkGreen"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.823"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.475">
+
+            <ImageButton
+                android:id="@+id/room4c"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:clickable="false"
+                android:contentDescription="@string/room_4c"
+                android:background="@color/darkGreen"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter" />
+
+            <TextView
+                android:id="@+id/room4CText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RoomC204"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:id="@+id/room4CTextStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/vacant"
+                android:layout_gravity="center" />
+
+
+        </FrameLayout>
 
         <TextView
-            android:id="@+id/room4CText"
+            android:id="@+id/textBuildingC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="RoomC204"
-            android:layout_gravity="center_horizontal" />
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="157dp"
+            android:layout_marginBottom="668dp"
+            android:text="@string/building_c"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/room4CTextStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/vacant"
-            android:layout_gravity="center" />
-
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/textBuildingC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="157dp"
-        android:layout_marginBottom="668dp"
-        android:text="@string/building_c"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
