-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen.

--- a/TbdModule/src/main/res/layout/fragment_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_settings.xml
@@ -301,14 +301,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="Help"
+                        android:text="@string/contact_us"
+                        android:autoLink="phone"
+                        android:linksClickable="true"
                         android:textColor="@color/black"
                         android:layout_toEndOf="@+id/tbd_help"/>
-                    <ImageView
+                    <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tbd_call"
                         android:src="@drawable/tbd_call"
+                        android:background="@color/teal_700"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"/>
                 </RelativeLayout>
